# ecommerce-data-pipeline

./: .env.example  .gitignore  README.md  architect.md  dataflow.md  dataflow_diagram.md  docker-compose.iceberg.yml  docker-compose.yml  env.txt  init.py  kafka_event_producer.py  kafka_producer.py  pyproject.toml  requirements.txt  run_dbt.sh  run_etl_adaptive.py  run_etl_iceberg.sh  run_etl_manual.py  run_etl_manual_sim.py  run_lakehouse_etl.py  run_quality_checks.py  test_spark.py  upload_to_datalake.py
catalog/iceberg/: catalog.yaml
dags/: daily_etl_pipeline.py  data_quality_dag.py  hourly_streaming_pipeline.py
dbt_project/: .user.yml  dbt_project.yml  packages.yml  profiles.yml  readme.md
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: _marts.yml  dim_customers.sql  dim_products.sql  fact_orders.sql  mart_sales_summary.sql
dbt_project/models/staging/: _staging.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
dbt_project/tests/: assert_positive_revenue.sql
scripts/: run_tests.sh  start_iceberg.ps1  start_iceberg.sh  start_pipeline.sh  start_pipeline_enhan.sh  start_pipeline_fixed.sh
spark_jobs/: aggregation_jobs.py  batch_orders_processing.py  iceberg_bronze_ingestion.py  iceberg_config.py  iceberg_gold_aggregate.py  iceberg_silver_transform.py  streaming_events_processing.py
sql/: analytical_queries.sql  create_data_marts.sql  create_source_tables.sql  create_warehouse_tables.sql  init_source.sql  init_warehouse.sql
src/config/: settings.py
src/ingestion/: api_ingestion.py  database_ingestion.py  file_ingestion.py  init.py  kafka_producer.py
src/lakehouse/: bronze_layer.py  gold_layer.py  iceberg_manager.py  init.py  silver_layer.py
src/processing/: transformations.py
src/quality/: data_quality_checks.py  init.py
src/utils/: database_utils.py  init.py  logging_utils.py
src/warehouse/: data_warehouse.py  init.py  schema_definitions.py
tests/: __init__.py  init.py  test_data_quality.py  test_ingestion.py  test_transformations.py
tests/integration/: __init__.py  test_pipeline_integration.py
trino/catalog/: iceberg.properties
trino/etc/: jvm.config  log.properties
