[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-data-pipeline"
version = "1.0.0"
description = "A production-ready, scalable data pipeline platform for e-commerce analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "data-engineering",
    "etl",
    "data-pipeline",
    "spark",
    "kafka",
    "airflow",
    "iceberg",
    "dbt",
    "data-lakehouse"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "pyarrow>=14.0.1",
    "requests>=2.31.0",
    "boto3>=1.33.0",
    "minio>=7.2.0",
    "kafka-python>=2.0.2",
    "tenacity>=8.2.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.0",
]
airflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.7.0",
    "apache-airflow-providers-apache-spark>=4.5.0",
    "apache-airflow-providers-apache-kafka>=1.3.0",
]
dbt = [
    "dbt-core>=1.7.0",
    "dbt-postgres>=1.7.0",
]
quality = [
    "great-expectations>=0.18.0",
    "pandera>=0.17.2",
]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
all = [
    "ecommerce-data-pipeline[spark,airflow,dbt,quality,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/ecommerce-data-pipeline"
Documentation = "https://github.com/yourusername/ecommerce-data-pipeline#readme"
Repository = "https://github.com/yourusername/ecommerce-data-pipeline.git"
Issues = "https://github.com/yourusername/ecommerce-data-pipeline/issues"
Changelog = "https://github.com/yourusername/ecommerce-data-pipeline/blob/main/CHANGELOG.md"

[project.scripts]
etl-pipeline = "src.cli:main"
run-quality-checks = "src.quality.data_quality_checks:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.sql"]

# =============================================================================
# Black - Code Formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | dbt_packages
  | target
)/
'''

# =============================================================================
# isort - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "dbt_packages", "target"]
known_first_party = ["src"]
known_third_party = ["pyspark", "pandas", "numpy", "kafka", "airflow", "dbt"]

# =============================================================================
# MyPy - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "dbt_packages",
    "target",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "kafka.*",
    "airflow.*",
    "minio.*",
    "boto3.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "spark: marks tests that require Spark",
    "kafka: marks tests that require Kafka",
    "database: marks tests that require database",
    "iceberg: marks tests that require Iceberg",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
fail_under = 70
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Flake8 - Linting (via pyproject-flake8)
# =============================================================================
[tool.flake8]
max-line-length = 100
extend-ignore = ["E501", "W503", "E203"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "dbt_packages",
    "target",
]
per-file-ignores = [
    "__init__.py:F401",
]

# =============================================================================
# Ruff - Fast Linter (Alternative to flake8)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]